<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.qmuiteam.qmui.widget.pullRefreshLayout.QMUIPullRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/refresh">

        <com.qmuiteam.qmui.widget.QMUIAnimationListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/studentList"
            android:layout_margin="5dp"/>
    </com.qmuiteam.qmui.widget.pullRefreshLayout.QMUIPullRefreshLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:maxLines="1"
                android:text="@string/test_get"
                android:gravity="center"
                android:layout_margin="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:inputType="number"
                    android:hint="@string/enter_stuID"
                    android:layout_margin="10dp"
                    android:id="@+id/inputStudentId"/>

                <Button
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:maxLines="1"
                    android:text="@string/get"
                    android:layout_margin="10dp"
                    android:id="@+id/get"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/getResult"
                android:maxLines="100"
                android:textSize="16sp"
                android:text="@string/click_to_see"
                android:gravity="center"
                android:layout_margin="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:maxLines="1"
                android:text="@string/test_post"
                android:gravity="center"
                android:layout_margin="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:maxLines="1"
                        android:inputType="number"
                        android:hint="@string/enter_stuID"
                        android:layout_margin="10dp"
                        android:id="@+id/createStudentId"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:maxLines="1"
                        android:hint="@string/enter_stuName"
                        android:layout_margin="10dp"
                        android:id="@+id/createStudentName"/>
                </LinearLayout>

                <Button
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:maxLines="1"
                    android:layout_gravity="center"
                    android:text="@string/post"
                    android:layout_margin="10dp"
                    android:id="@+id/post"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/postResult"
                android:maxLines="100"
                android:textSize="16sp"
                android:text="@string/click_to_see"
                android:gravity="center"
                android:layout_margin="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:maxLines="1"
                android:text="@string/test_del"
                android:gravity="center"
                android:layout_margin="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:inputType="number"
                    android:hint="@string/enter_stuID"
                    android:layout_margin="10dp"
                    android:id="@+id/deleteStudentId"/>

                <Button
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:maxLines="1"
                    android:text="@string/delete"
                    android:layout_margin="10dp"
                    android:id="@+id/delete"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/deleteResult"
                android:maxLines="100"
                android:textSize="16sp"
                android:text="@string/click_to_see"
                android:gravity="center"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>